<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:id="@+id/layout_nav_top"
        android:layout_alignParentTop="true"
        layout="@layout/layout_top" />

    <LinearLayout
        android:id="@+id/layout_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/bar"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_set"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bar"
            android:drawableTop="@drawable/tab_set_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_set"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="@dimen/text_size_medium" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/tab_yuan_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_contact"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_recent_tips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="30dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/msg_tips"
                android:contentDescription="@string/action_settings"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bar"
                android:drawableTop="@drawable/tab_discover_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_share"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="@dimen/text_size_medium" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" >

            <Button
                android:id="@+id/btn_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bar"
                android:drawableTop="@drawable/tab_message_btn"
                android:onClick="onTabSelect"
                android:paddingBottom="2dip"
                android:paddingTop="7dip"
                android:scaleType="matrix"
                android:text="@string/main_tab_message"
                android:textColor="@drawable/tab_textcolor"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/tv_message_tips"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="6dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/rounder_corners"
                android:visibility="visible" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_nearby"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bar"
            android:drawableTop="@drawable/tab_near_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_nearby"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_userwall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bar"
            android:drawableTop="@drawable/tab_yuan_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_userwall"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_strangenews"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bar"
            android:drawableTop="@drawable/tab_yuan_btn"
            android:onClick="onTabSelect"
            android:paddingBottom="2dip"
            android:paddingTop="7dip"
            android:scaleType="matrix"
            android:text="@string/main_tab_strangenews"
            android:textColor="@drawable/tab_textcolor"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_main_bottom"
        android:layout_below="@id/layout_nav_top" />

    <include
        android:id="@+id/layout_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        layout="@layout/layout_sytem_notice" />

    <include
        android:id="@+id/popup_sayhi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/layout_main_bottom"
        layout="@layout/popup_sayhi"
        android:visibility="gone" />

</RelativeLayout>